# polymind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  LOOP.md  MANIFEST.in  Makefile  README.md  RELEASE.md  STATE.md  THIRD_PARTY.md  coverage.json  docker-compose.yml  index.html  loop-constraints.md  loop-run-log.md  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/agents/: loop-verifier.md
.claude/prompts/: architecture-conformance-loop.md  reference-port-loop.md
.github/workflows/: ci.yml  pages.yml  test.yml
api/core/: index.html
api/execution/: index.html
api/polymarket/: index.html
api/strategies/: index.html
architecture/: index.html
architecture/conformance-state/: index.html
architecture/current-state/: index.html
architecture/loop-run-log/: index.html
architecture/reference-port-state/: index.html
architecture/roadmap-triage-state/: index.html
docs/: architecture.md  index.md  review-prompt.md
docs/api/: core.md  execution.md  polymarket.md  strategies.md
docs/architecture/: conformance-state.md  current-state.md  loop-run-log.md  reference-port-state.md  roadmap-triage-state.md
docs/guides/: getting-started.md
docs/references/: cross-sectional-momentum-kill.md  factor-research-overview.md  official-mm-keeper.md  official-mm-parity.md  pm-terminal.md  probablyprofit.md  reference-projects.md  warproxxx-mm-bot.md
docs/studio/: validation-gates.md
examples/: amm_strategy_example.py  factor_strategy_example.py  safety_example.py
guides/getting-started/: index.html
polymind/: __init__.py  __main__.py
polymind/agents/: __init__.py  anthropic.py  base.py  ensemble.py  gemini.py  intelligence.py  openai.py
polymind/alerts/: __init__.py  telegram.py
polymind/backtesting/: data.py  engine.py  execution_model.py  factor_bt.py  metrics.py
polymind/cli/: __init__.py  conformance.py  main.py
polymind/core/: __init__.py  agent.py  config.py  discover.py  engine.py  exchange.py  fills.py  intents.py  ledger.py  plugin.py  portfolio.py  risk.py  strategy.py  workflows.py
polymind/execution/: __init__.py  executor.py  fill_model.py  live_executor.py  order_identity.py  order_manager.py  persistence.py  safety.py  serializer.py
polymind/factors/: __init__.py  execution.py  features.py  filters.py  pipeline.py  portfolio_construction.py  registry.py  scoring.py
polymind/kalshi/: adapter.py
polymind/limitless/: __init__.py  adapter.py
polymind/monitoring/: __init__.py  metrics.py
polymind/polymarket/: __init__.py  client.py  contracts.py  data_api.py  errors.py  metrics.py  pair_lifecycle.py  signer.py  types.py  websocket.py
polymind/reconciliation/: __init__.py  balances.py  fills.py  recovery.py  verifier.py
polymind/reports/: __init__.py  dashboard.py  pnl.py  positions.py  risk.py
polymind/risk/: __init__.py  drawdown.py  exposure.py  limits.py  manager.py
polymind/storage/: database.py  duckdb_panels.py  ledger.py  models.py  price_store.py  warehouse.py
polymind/strategies/: __init__.py
polymind/studio/: __init__.py  factor_analysis.py  factor_discovery.py  generator.py  optimizer.py  promotion_gate.py
polymind/templates/: __init__.py  base.py  library.py
polymind/utils/: __init__.py  killswitch.py  logging.py  preflight.py  secrets.py
polymind/web/: __init__.py  gallery.py
polymind/workflows/: __init__.py  runner.py
references/cross-sectional-momentum-kill/: index.html
references/factor-research-overview/: index.html
references/official-mm-keeper/: index.html
references/official-mm-parity/: index.html
references/pm-terminal/: index.html
references/probablyprofit/: index.html
references/reference-projects/: index.html
references/warproxxx-mm-bot/: index.html
review-prompt/: index.html
scripts/: architecture-conformance-loop.sh  backtest_factor.py  collect_snapshots.py  reference-port-loop.sh
search/: search_index.json
studio/validation-gates/: index.html
tests/: conftest.py  test_fills.py  test_intents.py  test_ledger.py  test_ledger_entry.py  test_portfolio.py  test_public_exports.py  test_risk.py  test_risk_manager_contracts.py  test_strategy.py  test_strategy_interface_contracts.py  test_strategy_registry_cli_contracts.py  test_workflows.py
tests/agents/: test_anthropic.py  test_base.py  test_ensemble.py  test_gemini.py  test_intelligence.py  test_openai.py
tests/alerts/: test_telegram.py
tests/backtesting/: test_data.py  test_engine.py  test_execution_model.py  test_factor_bt.py  test_metrics.py
tests/cli/: test_conformance.py  test_main.py
tests/core/: test_agent.py  test_config.py  test_discover.py  test_engine.py  test_exchange.py  test_plugin.py
tests/execution/: test_fill_model.py  test_fill_model_advanced.py  test_live_executor.py  test_order_identity.py  test_order_manager.py  test_paper_executor.py  test_persistence.py  test_safety.py  test_serializer.py
tests/factors/: test_execution.py  test_factor_registry_wiring.py  test_features.py  test_filters.py  test_pipeline.py  test_portfolio_construction.py  test_registry.py  test_scoring.py
tests/integration/: conftest.py  test_factor_pipeline.py  test_full_pipeline.py  test_multi_strategy.py  test_paper_trading.py  test_risk_integration.py  test_safety_reconciliation.py  test_workflow_integration.py
tests/kalshi/: test_adapter.py
tests/limitless/: test_adapter.py
tests/monitoring/: test_metrics.py
tests/polymarket/: test_client.py  test_contracts.py  test_data_api.py  test_errors.py  test_metrics.py  test_pair_lifecycle.py  test_pair_lifecycle_integration.py  test_signer.py  test_websocket.py
tests/reconciliation/: test_balances.py  test_reconciliation_fills.py  test_recovery.py  test_verifier.py
tests/reports/: test_dashboard.py  test_pnl.py  test_positions.py  test_reports.py  test_risk.py
tests/risk/: test_drawdown.py  test_exposure.py  test_limits.py  test_manager.py
tests/storage/: test_database.py  test_duckdb_panels.py  test_ledger.py  test_models.py  test_price_store.py  test_warehouse.py
tests/utils/: test_logging.py  (+3 more)
(+203 files in other folders)
